Avances, tipos de datos. vistas

--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -36,8 +36,9 @@
     </head>
 <body class="hold-transition login-page">
     <div class="login-box">
+        <h5><b>S</b>istema de <b>E</b>ntrenamiento <b>M</b>atematico <b>P</b>re<b>U</b>niversitario</h5>
       <div class="login-logo">
-        <b>SEPU</b>M
+        <b>SE</b>M<b>PU</b>
       </div><!-- /.login-logo -->
       <div class="login-box-body {% if error %}has-error{% endif %}">
         <p class="login-box-msg">Inicio de Sesion</p>
