--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,7 +12,8 @@
             <script type='text/javascript'>
             window.onload = detectarCarga;
             function detectarCarga(){
-            document.getElementById("imgLOAD").style.display="none";
+              document.getElementById("imgLOAD").style.display="none";
+              document.getElementById("body").style.display="initial";
             }
             </script>
             <link rel="stylesheet" href="{{ asset('bundles/app/bootstrap/css/bootstrap.min.css')}}">
@@ -34,212 +35,34 @@
             <![endif]-->
         {% endblock %}        
     </head>
-    <body ng-app="AppModule" class="hold-transition skin-blue
-    {% if is_granted('ROLE_ESTUDIANTE') %}layout-top-nav{% else %}layout-boxed sidebar-mini{% endif %}" ng-controller="LoadCtrl">
-        <div id="body" class="wrapper">
-        <h3 id="imgLOAD">Cargando...</h3>
+    <body ng-app="AppModule" class="hold-transition skin-blue layout-top-nav" ng-controller="LoadCtrl">
+        <div id="imgLOAD" style="text-align:center;position:absolute;top:0;bottom:0;left:0;right:0;height:20%;margin: auto;">
+          <h3>Cargando...</h3>
+          <div style="margin:auto;width:24px;height:24px;border:solid 2px transparent;border-top-color:  #29d;border-left-color:#29d;border-radius:50%;-webkit-animation: loading-bar-spinner 400ms linear infinite;-moz-animation: loading-bar-spinner 400ms linear infinite;-ms-animation: loading-bar-spinner 400ms linear infinite;-o-animation:      loading-bar-spinner 400ms linear infinite;animation: loading-bar-spinner 400ms linear infinite;"></div>
+        </div>
+        <div id="body" class="wrapper" style="display:none;">
 
             
-        {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_SUPER_ADMIN') %}
-            {% include 'header_admin.html.twig' %}
-        {% else %}
-            {% include 'header.html.twig' %}
+        {% include 'header.html.twig' %}
+        {% if app.user %}{# If alguien esta login se muestra el menu #}
+        {#% else %}
+            {% include 'header_admin.html.twig' %#}
         {% endif %}
 
             <!-- Content Wrapper. Contains page content -->
             <div class="content-wrapper">
-            {% if is_granted('ROLE_ESTUDIANTE') %}
-                <div class="container">
-            {% endif %}
+              <div class="container">
                 {% block body %}{% endblock %}
-                {% if is_granted('ROLE_ESTUDIANTE') %}
-                    </div>
-                {% endif %}
+              </div>
             </div><!-- /.content-wrapper -->
 
         <footer class="main-footer">
             <div class="pull-right hidden-xs">
               <b>Version</b> 1.0
             </div>
-            <strong>Copyright &copy; 2014-2015 <a href="#">Facyt</a>.</strong>{{ path(app.request.attributes.get('_route'),
-         app.request.attributes.get('_route_params')) }}
-            {{ path('users')}}</br>
-            {{ path('fos_user_registration_register')}}</br>
-            {{ path('estudiante_index')}}</br>
-            {{ path('estudiante_new')}}</br>
-            {{ path('tema_index')}}</br>
-            {{ path('tema_new')}}</br>
-            {{ path('ejercicio_index')}}</br>
-            {{ path('ejercicio_new')}}</br>
-            {{ path('expresionmatematica_index')}}</br>
-        {{ path('expresionmatematica_new')}}
+            <strong>Copyright &copy; 2014-2015 <a href="http://facyt.uc.edu.ve">Facyt</a>.</strong>
         </footer>
 
-        <!-- Control Sidebar -->
-        <aside class="control-sidebar control-sidebar-dark">
-            <!-- Create the tabs -->
-            <ul class="nav nav-tabs nav-justified control-sidebar-tabs">
-              <li><a href="#control-sidebar-home-tab" data-toggle="tab"><i class="fa fa-home"></i></a></li>
-              <li><a href="#control-sidebar-settings-tab" data-toggle="tab"><i class="fa fa-gears"></i></a></li>
-            </ul>
-            <!-- Tab panes -->
-            <div class="tab-content">
-              <!-- Home tab content -->
-              <div class="tab-pane" id="control-sidebar-home-tab">
-                <h3 class="control-sidebar-heading">Recent Activity</h3>
-                <ul class="control-sidebar-menu">
-                  <li>
-                    <a href="javascript::;">
-                      <i class="menu-icon fa fa-birthday-cake bg-red"></i>
-                      <div class="menu-info">
-                        <h4 class="control-sidebar-subheading">Langdon's Birthday</h4>
-                        <p>Will be 23 on April 24th</p>
-                      </div>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="javascript::;">
-                      <i class="menu-icon fa fa-user bg-yellow"></i>
-                      <div class="menu-info">
-                        <h4 class="control-sidebar-subheading">Frodo Updated His Profile</h4>
-                        <p>New phone +1(800)555-1234</p>
-                      </div>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="javascript::;">
-                      <i class="menu-icon fa fa-envelope-o bg-light-blue"></i>
-                      <div class="menu-info">
-                        <h4 class="control-sidebar-subheading">Nora Joined Mailing List</h4>
-                        <p>nora@example.com</p>
-                      </div>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="javascript::;">
-                      <i class="menu-icon fa fa-file-code-o bg-green"></i>
-                      <div class="menu-info">
-                        <h4 class="control-sidebar-subheading">Cron Job 254 Executed</h4>
-                        <p>Execution time 5 seconds</p>
-                      </div>
-                    </a>
-                  </li>
-                </ul><!-- /.control-sidebar-menu -->
-
-                <h3 class="control-sidebar-heading">Tasks Progress</h3>
-                <ul class="control-sidebar-menu">
-                  <li>
-                    <a href="javascript::;">
-                      <h4 class="control-sidebar-subheading">
-                        Custom Template Design
-                        <span class="label label-danger pull-right">70%</span>
-                      </h4>
-                      <div class="progress progress-xxs">
-                        <div class="progress-bar progress-bar-danger" style="width: 70%"></div>
-                      </div>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="javascript::;">
-                      <h4 class="control-sidebar-subheading">
-                        Update Resume
-                        <span class="label label-success pull-right">95%</span>
-                      </h4>
-                      <div class="progress progress-xxs">
-                        <div class="progress-bar progress-bar-success" style="width: 95%"></div>
-                      </div>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="javascript::;">
-                      <h4 class="control-sidebar-subheading">
-                        Laravel Integration
-                        <span class="label label-warning pull-right">50%</span>
-                      </h4>
-                      <div class="progress progress-xxs">
-                        <div class="progress-bar progress-bar-warning" style="width: 50%"></div>
-                      </div>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="javascript::;">
-                      <h4 class="control-sidebar-subheading">
-                        Back End Framework
-                        <span class="label label-primary pull-right">68%</span>
-                      </h4>
-                      <div class="progress progress-xxs">
-                        <div class="progress-bar progress-bar-primary" style="width: 68%"></div>
-                      </div>
-                    </a>
-                  </li>
-                </ul><!-- /.control-sidebar-menu -->
-
-              </div><!-- /.tab-pane -->
-              <!-- Stats tab content -->
-              <div class="tab-pane" id="control-sidebar-stats-tab">Stats Tab Content</div><!-- /.tab-pane -->
-              <!-- Settings tab content -->
-              <div class="tab-pane" id="control-sidebar-settings-tab">
-                <form method="post">
-                  <h3 class="control-sidebar-heading">General Settings</h3>
-                  <div class="form-group">
-                    <label class="control-sidebar-subheading">
-                      Report panel usage
-                      <input type="checkbox" class="pull-right" checked>
-                    </label>
-                    <p>
-                      Some information about this general settings option
-                    </p>
-                  </div><!-- /.form-group -->
-
-                  <div class="form-group">
-                    <label class="control-sidebar-subheading">
-                      Allow mail redirect
-                      <input type="checkbox" class="pull-right" checked>
-                    </label>
-                    <p>
-                      Other sets of options are available
-                    </p>
-                  </div><!-- /.form-group -->
-
-                  <div class="form-group">
-                    <label class="control-sidebar-subheading">
-                      Expose author name in posts
-                      <input type="checkbox" class="pull-right" checked>
-                    </label>
-                    <p>
-                      Allow the user to show his name in blog posts
-                    </p>
-                  </div><!-- /.form-group -->
-
-                  <h3 class="control-sidebar-heading">Chat Settings</h3>
-
-                  <div class="form-group">
-                    <label class="control-sidebar-subheading">
-                      Show me as online
-                      <input type="checkbox" class="pull-right" checked>
-                    </label>
-                  </div><!-- /.form-group -->
-
-                  <div class="form-group">
-                    <label class="control-sidebar-subheading">
-                      Turn off notifications
-                      <input type="checkbox" class="pull-right">
-                    </label>
-                  </div><!-- /.form-group -->
-
-                  <div class="form-group">
-                    <label class="control-sidebar-subheading">
-                      Delete chat history
-                      <a href="javascript::;" class="text-red pull-right"><i class="fa fa-trash-o"></i></a>
-                    </label>
-                  </div><!-- /.form-group -->
-                </form>
-              </div><!-- /.tab-pane -->
-            </div>
-        </aside><!-- /.control-sidebar -->
-        <!-- Add the sidebar's background. This div must be placed
-            immediately after the control sidebar -->
-        <div class="control-sidebar-bg"></div>
     </div><!-- ./wrapper -->
 
 
