--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -2,40 +2,46 @@
 <nav class="navbar navbar-static-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <a href="../../index2.html" class="navbar-brand"><b>SEPU</b>M</a>
+      <a href="#" class="navbar-brand"><b>SE</b><sapn style="font-size:x-large;">M</sapn><b>PU</b></a>
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
         <i class="fa fa-bars"></i>
       </button>
     </div>
-
+    {% if app.user %}
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-users"></i> Usuarios <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="{{ path('users')}}"><i class="fa fa-table"></i>&nbsp;Listar</a></li>
             <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="{{ path('fos_user_registration_register')}}"><i class="fa fa-user-plus"></i>&nbsp;Registrar</a></li>
+          </ul>
+        </li>
+        <li><a href="{{ path('estudiante_index')}}"><i class="fa fa-graduation-cap"></i> Estudiantes</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <i class="fa fa-book"></i> Contenido <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="{{ path('tema_index')}}"><i class="fa fa-circle-o"></i>Temas</a></li>
             <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="{{ path('ejercicio_index')}}"><i class="fa fa-circle-o"></i>Ejercicios</a></li>
+            <li class="divider"></li>
+            <li><a href="{{ path('expresionmatematica_index')}}"><i class="fa fa-circle-o"></i>Expresiones Matematicas</a></li>
           </ul>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
-    <!-- Navbar Right Menu -->
-      <div class="navbar-custom-menu">
-        <ul class="nav navbar-nav">
-          <!-- User Account Menu -->
+    <div class="navbar-custom-menu">
+      <ul class="nav navbar-nav">
+        <!-- User Account Menu -->
           <li class="dropdown user user-menu">
             <!-- Menu Toggle Button -->
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <!-- The user image in the navbar-->
-              <img src="../../dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+              <img src="{{asset('bundles/app/dist/img/avatar.png')}}" class="user-image" alt="User Image">
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
               <span class="hidden-xs">{{app.user.username}}</span>
             </a>
@@ -58,8 +64,10 @@
               </li>
             </ul>
           </li>
-        </ul>
-      </div><!-- /.navbar-custom-menu -->
+      </ul>
+    </div>
+    {% endif %}
+
   </div><!-- /.container-fluid -->
 </nav>
 </header>
